testsuite/tests/dependent/should_fail/T15591c.stderr

T15591c.hs:9:3: error:
    • The kind of ‘T5’ is ill-scoped
        Inferred kind: T5 :: forall {b :: Proxy a}.
                             Proxy b -> forall a -> *
      NB: Inferred variables (namely: (b :: Proxy a)) always come first
      Perhaps try this order instead: a (b :: Proxy a) (c :: Proxy b)
    • In the associated type family declaration for ‘T5’
